@@ -1,3 +1,8 @@
+8/10/2006 - jdiamond
+====================
+
+ * Fixed a "blank query" bug in the installer
+
 8/8/2006 - jdiamond
 ====================
 
